objects/Approver__c.object
<CustomObject>
    <fields>
        <fullName>Delegated_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delegated Approver</label>
        <referenceTo>Approver__c</referenceTo>
        <relationshipLabel>Approvers</relationshipLabel>
        <relationshipName>Approvers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deligation_end_date__c</fullName>
        <label>Deligation end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deligation_start_date__c</fullName>
        <label>Deligation start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Group_ID__c</fullName>
        <label>Group ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>Approver__c</referenceTo>
        <relationshipLabel>Approvers (User)</relationshipLabel>
        <relationshipName>Approvers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Approver</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Delegated_Approver__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Approver Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Approvers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>